Compile rcode-reader module with Java 11
RSSW-764