@@ -27,6 +27,7 @@ import static org.testng.Assert.assertTrue;
 
 import java.util.HashMap;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 
 import org.prorefactor.core.Pair;
 import org.testng.annotations.Test;
@@ -147,26 +148,26 @@ public class ITypeInfoTest {
     var list = info.getAllProperties(TYPE_INFO_PROVIDER);
     assertEquals(list.size(), 4);
     var sub1 = list.stream().filter(
-        it -> "Progress.IO.FileInputStream".equalsIgnoreCase(it.getO1().getTypeName())).toList();
+        it -> "Progress.IO.FileInputStream".equalsIgnoreCase(it.getO1().getTypeName())).collect(Collectors.toList());
     assertEquals(sub1.size(), 1);
     assertEquals(sub1.get(0).getO2().getName(), "FileName");
     var sub2 = list.stream().filter(
-        it -> "Progress.IO.InputStream".equalsIgnoreCase(it.getO1().getTypeName())).toList();
+        it -> "Progress.IO.InputStream".equalsIgnoreCase(it.getO1().getTypeName())).collect(Collectors.toList());
     assertEquals(sub2.size(), 1);
     assertEquals(sub2.get(0).getO2().getName(), "Closed");
-    var sub3 = list.stream().filter(it -> "Progress.Lang.Object".equalsIgnoreCase(it.getO1().getTypeName())).toList();
+    var sub3 = list.stream().filter(it -> "Progress.Lang.Object".equalsIgnoreCase(it.getO1().getTypeName())).collect(Collectors.toList());
     assertEquals(sub3.size(), 2);
     assertEquals(sub3.get(0).getO2().getName(), "Next-Sibling");
     assertEquals(sub3.get(1).getO2().getName(), "Prev-Sibling");
 
     var list2 = info.getAllMethods(TYPE_INFO_PROVIDER);
-    var sub4 = list2.stream().filter(it -> "Progress.Lang.Object".equalsIgnoreCase(it.getO1().getTypeName())).toList();
+    var sub4 = list2.stream().filter(it -> "Progress.Lang.Object".equalsIgnoreCase(it.getO1().getTypeName())).collect(Collectors.toList());
     assertEquals(sub4.size(), 4);
     var sub5 = list2.stream().filter(
-        it -> "Progress.IO.FileInputStream".equalsIgnoreCase(it.getO1().getTypeName())).toList();
+        it -> "Progress.IO.FileInputStream".equalsIgnoreCase(it.getO1().getTypeName())).collect(Collectors.toList());
     assertEquals(sub5.size(), 0);
     var sub6 = list2.stream().filter(
-        it -> "Progress.IO.InputStream".equalsIgnoreCase(it.getO1().getTypeName())).toList();
+        it -> "Progress.IO.InputStream".equalsIgnoreCase(it.getO1().getTypeName())).collect(Collectors.toList());
     assertEquals(sub6.size(), 7);
 
     var list3 = info.getAllConstructors(TYPE_INFO_PROVIDER);
@@ -185,38 +186,38 @@ public class ITypeInfoTest {
     var list = info.getAllProperties(TYPE_INFO_PROVIDER);
     assertEquals(list.size(), 6);
     var sub1 = list.stream().filter(
-        it -> "Progress.Lang.AppError".equalsIgnoreCase(it.getO1().getTypeName())).toList();
+        it -> "Progress.Lang.AppError".equalsIgnoreCase(it.getO1().getTypeName())).collect(Collectors.toList());
     assertEquals(sub1.size(), 1);
     assertEquals(sub1.get(0).getO2().getName(), "ReturnValue");
     var sub2 = list.stream().filter(
-        it -> "Progress.Lang.ProError".equalsIgnoreCase(it.getO1().getTypeName())).toList();
+        it -> "Progress.Lang.ProError".equalsIgnoreCase(it.getO1().getTypeName())).collect(Collectors.toList());
     assertEquals(sub2.size(), 3);
     assertEquals(sub2.get(0).getO2().getName(), "NumMessages");
     assertEquals(sub2.get(1).getO2().getName(), "CallStack");
     assertEquals(sub2.get(2).getO2().getName(), "Severity");
-    var sub3 = list.stream().filter(it -> "Progress.Lang.Object".equalsIgnoreCase(it.getO1().getTypeName())).toList();
+    var sub3 = list.stream().filter(it -> "Progress.Lang.Object".equalsIgnoreCase(it.getO1().getTypeName())).collect(Collectors.toList());
     assertEquals(sub3.size(), 2);
     assertEquals(sub3.get(0).getO2().getName(), "Next-Sibling");
     assertEquals(sub3.get(1).getO2().getName(), "Prev-Sibling");
     var sub4 = list.stream().filter(
-        it -> "Progress.Lang.Error".equalsIgnoreCase(it.getO1().getTypeName())).toList();
+        it -> "Progress.Lang.Error".equalsIgnoreCase(it.getO1().getTypeName())).collect(Collectors.toList());
     assertEquals(sub4.size(), 0);
 
     var list2 = info.getAllMethods(TYPE_INFO_PROVIDER);
-    var sub5 = list2.stream().filter(it -> "Progress.Lang.Object".equalsIgnoreCase(it.getO1().getTypeName())).toList();
+    var sub5 = list2.stream().filter(it -> "Progress.Lang.Object".equalsIgnoreCase(it.getO1().getTypeName())).collect(Collectors.toList());
     assertEquals(sub5.size(), 4);
     var sub6 = list2.stream().filter(
-        it -> "Progress.Lang.AppError".equalsIgnoreCase(it.getO1().getTypeName())).toList();
+        it -> "Progress.Lang.AppError".equalsIgnoreCase(it.getO1().getTypeName())).collect(Collectors.toList());
     assertEquals(sub6.size(), 2);
     assertEquals(sub6.get(0).getO2().getName(), "AddMessage");
     assertEquals(sub6.get(1).getO2().getName(), "RemoveMessage");
     var sub7 = list2.stream().filter(
-        it -> "Progress.Lang.ProError".equalsIgnoreCase(it.getO1().getTypeName())).toList();
+        it -> "Progress.Lang.ProError".equalsIgnoreCase(it.getO1().getTypeName())).collect(Collectors.toList());
     assertEquals(sub7.size(), 2);
     assertEquals(sub7.get(0).getO2().getName(), "GetMessage");
     assertEquals(sub7.get(1).getO2().getName(), "GetMessageNum");
     var sub8 = list2.stream().filter(
-        it -> "Progress.Lang.Error".equalsIgnoreCase(it.getO1().getTypeName())).toList();
+        it -> "Progress.Lang.Error".equalsIgnoreCase(it.getO1().getTypeName())).collect(Collectors.toList());
     assertEquals(sub8.size(), 0);
 
     var list3 = info.getAllConstructors(TYPE_INFO_PROVIDER);
